--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -40,7 +40,7 @@ ext {
       daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
       dagger:             "com.google.dagger:dagger:${daggerVersion}",
       butterKnife:        "com.jakewharton:butterknife:${butterKnifeVersion}",
-      recyclerView:       "com.android.support:recyclerview-v7:${recyclerViewVersion}",
+      recyclerView:       "androidx.recyclerview:recyclerview:1.0.0",
       rxJava:             "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
       rxAndroid:          "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
       javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}"
@@ -50,7 +50,7 @@ ext {
       mockito:            "org.mockito:mockito-core:${mockitoVersion}",
       dexmaker:           "com.google.dexmaker:dexmaker:${dexmakerVersion}",
       dexmakerMockito:    "com.google.dexmaker:dexmaker-mockito:${dexmakerVersion}",
-      espresso:           "com.android.support.test.espresso:espresso-core:${espressoVersion}",
+      espresso:           "androidx.test.espresso:espresso-core:3.1.0",
       testingSupportLib:  "com.android.support.test:testing-support-lib:${testingSupportLibVersion}",
   ]
 
@@ -76,7 +76,7 @@ ext {
       rxAndroid:          "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
       javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
       javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
-      androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}"
+      androidAnnotations: "androidx.annotation:annotation:1.0.0"
   ]
 
   dataTestDependencies = [
