--- a/data/build.gradle
+++ b/data/build.gradle
@@ -25,6 +25,12 @@ android {
     targetCompatibility JavaVersion.VERSION_1_8
   }
 
+  testOptions {
+    unitTests {
+      includeAndroidResources = true
+    }
+  }
+
   packagingOptions {
     exclude 'LICENSE.txt'
     exclude 'META-INF/DEPENDENCIES'
