--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,12 @@ android:
     - tools
     - platform-tools
     - tools
-    - build-tools-24.0.1
-    - android-23
+    - build-tools-30.0.3
+    - android-30
     - extra-google-m2repository
     - extra-android-m2repository
-
+before_install:
+  - yes | sdkmanager "platforms;android-30"
 licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
