--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ buildscript {
 }
 
 allprojects {
+
+  repositories {
+    google()
+    jcenter()
+  }
+
   ext {
     androidApplicationId = 'com.fernanependocejas.android10.sample.presentation'
     androidVersionCode = 1
